<resources>
    <string name="app_name">Brain Teaser</string>
    <string name="logo_icon">logo view</string>
    <string name="restart_icon">restart icon</string>
    <string name="info_message">Contact with the App Developer\n regarding bugs!!\n \n~Developer : Bishal Prasad\nContact : bishalprasad321@gmail.com</string>
    <string name="game_version">Brain Teaser v1.0</string>
    <string name="quote_01">Some are born strong and others are made strong</string>
    <string name="quote_02">When u practice something with conscious mind n then continue practicing the same even with sub-conscious mind, You Master it</string>
    <string name="qoute_03">The brain is like a muscle; books are the diet and writing is the workout</string>
    <string name="quote_04">You miss 100% of the shots you don\'t take</string>
    <string name="quote_05">Whether you think you can or you think you can\'t, you\'re right</string>
    <string name="qoute_06">Nothing is impossible, the word itself says, ‘I\'m possible!\'</string>
    <string name="qoute_07">The question isn\'t who is going to let me; it\'s who is going to stop me</string>
    <string name="qoute_08">The only person you are destined to become is the person you decide to be</string>
    <string name="qoute_09">Believe you can and you\'re halfway there</string>
    <string name="qoute_10">The question isn\'t who is going to let me; it\'s who is going to stop me</string>
    <string name="qoute_11">Winning isn\'t everything, but wanting to win is</string>
    <string name="qoute_12">You become what you believe</string>
    <string name="quote_13">The most difficult thing is the decision to act, the rest is merely tenacity</string>
    <string name="qoute_14">Everything you\'ve ever wanted is on the other side of fear</string>
    <string name="qoute_15">Dream big and dare to fail</string>
    <string name="quote_16">You may be disappointed if  you fail, but you are doomed if you don\'t try</string>
    <string name="quote_17">Life is 10% what happens to me and 90% of how I react to it</string>
    <string name="quote_18">It does not matter how slowly you go as long as you do not stop</string>
    <string name="quote_19">Too many of us are not living our dreams because we are living our fears</string>
    <string name="quote_20">I didn\'t fail the test. I just found 100 ways to do it wrong</string>
    <string name="exit_button">E X I T</string>
    <string name="play_button">P L A Y</string>
    <string name="click_to_play">....Click Me....</string>
    <string name="brain_teaser">BRAIN TEASER</string>
    <string name="text_view">TextView</string>
    <string name="question_number">0 of 0</string>
    <string name="time">01:00</string>
    <string name="time_sec">60 sec</string>
    <string name="game_over_text">!!GAME OVER!!</string>
    <string name="life_over_text">!!LIFE OVER!!, Restart Game</string>
    <string name="time_text">01:00</string>
    <string name="score_review2">Poor performance!!</string>
    <string name="score_review1">You need to see your maths teacher</string>
    <string name="score_review3">Woah!, you are becoming Genius</string>
    <string name="score_review4">Need Improvement, try to reach above 30</string>
    <string name="info_icon">info icon</string>
    <string name="select_category">Select Category</string>
    <string name="add">A D D</string>
    <string name="subtract">s u b t r a c t</string>
    <string name="product">p r o d u c t</string>
    <string name="divide">d i v i s i o n</string>
    <string name="developer_name">from BISHAL</string>
</resources>