<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201E1E"
    tools:context=".GameInterface">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midVerticalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/miniActionVerticalGuideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/healthGuideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.44"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/healthGuideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/miniActionVerticalGuideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/actionGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/miniActionGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/timerGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/questionGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/restartIconGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/timeIconGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/optionTopGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/optionMiddleGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/optionBottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <ImageView
        android:id="@+id/restartIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="8dp"
        android:onClick="restartAction"
        app:srcCompat="@drawable/restarticon"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/restart_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/restartIconGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionGuide"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/brainBulb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/brainbulblogo"
        app:layout_constraintLeft_toRightOf="@id/miniActionVerticalGuideLeft"
        app:layout_constraintRight_toLeftOf="@id/miniActionVerticalGuideRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionGuide"/>

    <TextView
        android:id="@+id/restartText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:onClick="restartAction"
        android:text="Restart"
        android:textColor="#FFD900"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck"
        app:layout_constraintLeft_toRightOf="@id/restartIconGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionGuide"
        app:layout_constraintRight_toLeftOf="@id/miniActionVerticalGuideLeft"/>

    <ImageView
        android:id="@+id/timerClock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="8dp"
        app:srcCompat="@drawable/clocklogo"
        app:layout_constraintLeft_toRightOf="@id/timeIconGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionGuide"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/clockTimer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:gravity="center|right"
        android:fontFamily="@font/baloo"
        android:text="@string/time_sec"
        android:textColor="#FFD900"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/miniActionVerticalGuideRight"
        app:layout_constraintRight_toLeftOf="@id/timeIconGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionGuide"/>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/rounded_views"
        android:backgroundTint="#ffd900"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/question_number"
        android:textColor="#201e1e"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/startGuide"
        app:layout_constraintRight_toLeftOf="@id/midVerticalGuide"
        app:layout_constraintTop_toBottomOf="@id/miniActionGuide"
        app:layout_constraintBottom_toTopOf="@id/timerGuide"/>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_views2"
        android:layout_marginTop="6dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#201e1e"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/midVerticalGuide"
        app:layout_constraintRight_toLeftOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/miniActionGuide"
        app:layout_constraintBottom_toTopOf="@id/timerGuide"/>

    <TextView
        android:id="@+id/questionBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_question_box"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FFD900"
        android:textSize="26sp"
        app:layout_constraintLeft_toRightOf="@id/startGuide"
        app:layout_constraintRight_toLeftOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/timerGuide"
        app:layout_constraintBottom_toTopOf="@id/questionGuide"/>

    <ImageView
        android:id="@+id/homeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="homeAlert"
        app:srcCompat="@drawable/homelogo"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionGuide"
        app:layout_constraintBottom_toTopOf="@id/miniActionGuide"
        app:layout_constraintRight_toLeftOf="@id/miniActionVerticalGuideLeft"/>

    <ImageView
        android:id="@+id/health1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="1"
        android:padding="10dp"
        android:onClick="infoApp"
        app:srcCompat="@drawable/health"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        app:layout_constraintLeft_toRightOf="@id/miniActionVerticalGuideLeft"
        app:layout_constraintRight_toLeftOf="@id/healthGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/actionGuide"
        app:layout_constraintBottom_toTopOf="@id/miniActionGuide"/>

    <ImageView
        android:id="@+id/health2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="1"
        android:padding="10dp"
        android:onClick="infoApp"
        app:srcCompat="@drawable/health"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        app:layout_constraintLeft_toRightOf="@id/healthGuideLeft"
        app:layout_constraintRight_toLeftOf="@id/healthGuideRight"
        app:layout_constraintTop_toBottomOf="@id/actionGuide"
        app:layout_constraintBottom_toTopOf="@id/miniActionGuide"/>

    <ImageView
        android:id="@+id/health3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="1"
        android:padding="10dp"
        android:onClick="infoApp"
        app:srcCompat="@drawable/health"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:layout_constraintLeft_toRightOf="@id/healthGuideRight"
        app:layout_constraintRight_toLeftOf="@id/bulbHint"
        app:layout_constraintTop_toBottomOf="@id/actionGuide"
        app:layout_constraintBottom_toTopOf="@id/miniActionGuide"/>

    <ImageView
        android:id="@+id/bulbHint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="infoApp"
        app:srcCompat="@drawable/bulbglow"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:layout_constraintLeft_toRightOf="@id/miniActionVerticalGuideRight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionGuide"
        app:layout_constraintBottom_toTopOf="@id/miniActionGuide"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_option"
        android:backgroundTint="#ffd900"
        android:fontFamily="@font/baloo"
        android:onClick="chooseAnswer"
        android:tag="0"
        android:text="Button"
        android:textColor="#201E1E"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck"
        app:layout_constraintLeft_toRightOf="@id/startGuide"
        app:layout_constraintRight_toLeftOf="@id/midVerticalGuide"
        app:layout_constraintTop_toBottomOf="@id/optionTopGuide"
        app:layout_constraintBottom_toTopOf="@id/optionMiddleGuide"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_option"
        android:backgroundTint="#ffd900"
        android:fontFamily="@font/baloo"
        android:onClick="chooseAnswer"
        android:tag="1"
        android:text="Button"
        android:textColor="#201E1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/midVerticalGuide"
        app:layout_constraintRight_toLeftOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/optionTopGuide"
        app:layout_constraintBottom_toTopOf="@id/optionMiddleGuide"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_option"
        android:backgroundTint="#ffd900"
        android:fontFamily="@font/baloo"
        android:onClick="chooseAnswer"
        android:tag="2"
        android:text="Button"
        android:textColor="#201E1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/startGuide"
        app:layout_constraintRight_toLeftOf="@id/midVerticalGuide"
        app:layout_constraintTop_toBottomOf="@id/optionMiddleGuide"
        app:layout_constraintBottom_toTopOf="@id/optionBottomGuide"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_option"
        android:backgroundTint="#ffd900"
        android:fontFamily="@font/baloo"
        android:onClick="chooseAnswer"
        android:tag="3"
        android:text="Button"
        android:textColor="#201E1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/midVerticalGuide"
        app:layout_constraintRight_toLeftOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/optionMiddleGuide"
        app:layout_constraintBottom_toTopOf="@id/optionBottomGuide"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:fontFamily="@font/baloo"
        android:text="@string/text_view"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baloo"
        android:text=""
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:textColor="#FFD900"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/round_play_again"
        android:fontFamily="@font/baloo"
        android:onClick="playAgain"
        android:text="Play Again"
        android:textSize="28sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>